[package]
name = "bytestool"
version = "0.1.0"
authors = ["Frank Rehberger <frehberg@gmail.com>"]
description = "Define releasetags being embedded in crash-files 'core'"
license = "Apache-2.0"
documentation = "https://github.com/frehberg/rust-bytestool"

[lib]
name = "bytestool"
plugin = true

[dependencies]
