[package]
name = "bytestool"
version = "0.2.0"
authors = ["Frank Rehberger <frehberg@gmail.com>"]
description = "Compiler plugins by example:  byte_size_of(b"0123") returning length of byte-string (4), concat_bytes!([0u8], b"123") forming a single byte array b"0123".
documentation = "https://github.com/frehberg/rust-bytestool"

[lib]
name = "bytestool"
plugin = true

[dependencies]
