[package]
name = "bytestool"
version = "0.3.0"
authors = ["Frank Rehberger <frehberg@gmail.com>"]
license = "Apache-2.0"
description = "Compiler plugins: compile time byte_size_of!(..) and concat_bytes!(..)" 
documentation = "https://github.com/frehberg/rust-bytestool"

[lib]
name = "bytestool"
plugin = true

[dependencies]
